Tests on level0 pass