@@ -1,32 +1,33 @@
 package nl.han.ica.icss.ast;
 
+import lombok.AllArgsConstructor;
 import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 @EqualsAndHashCode
+@NoArgsConstructor
+@AllArgsConstructor
 public class Ruleset implements AstNode {
-  private final Selector selector;
-  private final List<AstNode> declarations;
-
-  public Ruleset(Selector selector) {
-    this.selector = selector;
-    this.declarations = new ArrayList<>();
-  }
+  private Selector selector = null;
+  private Declarations declarations = null;
 
   @Override
   public List<AstNode> getChildren() {
-    List<AstNode> children = new ArrayList<>();
-    children.add(selector);
-    children.addAll(declarations);
-    return Collections.unmodifiableList(children);
+    return List.of(selector, declarations);
   }
 
   @Override
+  @SuppressWarnings("PatternVariableHidesField")
   public AstNode addChild(AstNode child) {
-    declarations.add(child);
+    if (child instanceof Selector selector) {
+      this.selector = selector;
+    } else if (child instanceof Declarations declarations) {
+      this.declarations = declarations;
+    }
     return this;
   }
 }
